<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eclair Vinhos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_logarDepois">Logar depois</string>
    <string name="dsc_logo">Logotipo</string>
    <string name="lblEmail">Email</string>
    <string name="lblSenha">Senha</string>
    <string name="lblNome">Nome Completo</string>
    <string name="lblTelComercial">Telefone comercial</string>
    <string name="lblTelCelular">Telefone celular</string>
    <string name="lblTelResidencial">Telefone residencial</string>
    <string name="lblDia">Dia</string>
    <string name="lblMes">Mes</string>
    <string name="lblAno">Ano</string>
    <string name="lblNews">Deseja receber novidades?</string>
    <string name="btn_lerQRCode">Ler QRCode</string>
    <string name="lbl_lendo">Lendo</string>
    <string name="logoCat"></string>
    <string name="lblNomeEndereco">Nome do endereço</string>
    <string name="lblLogradouro">Logradouro</string>
    <string name="lblNumero">Número</string>
    <string name="lblCep">CEP</string>
    <string name="lblCpf">CPF</string>
    <string name="lblComplemento">Complemento</string>
    <string name="lblCidade">Cidade</string>
    <string name="lblPais">País</string>
    <string name="lblUF">UF</string>
    <string name="btnFinalizarPedido">Finalizar Pedido</string>
    <string name="btnCotinuarComprando">Cotinuar Comprando</string>    
    <string name="txtSobre">Este aplicativo foi criado por Ivan Bardini, Thaís Souza e Rafael Torres para o Projeto integrador do curso de Tecnologia em Sistemas para Internet do Senac.</string>
    

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Início</item>
        <item>Categorias</item>
        <item>Meu Carrinho</item>
        <item>Meus Endereços</item>
        <item>Sobre o App</item>        
        <item>Logout</item>
    </string-array>
    <string-array name="forma_pgto">
        <item>Cartão de crédito</item>
        <item>Boleto</item>
        <item>pagSeguro</item>
        <item>PayPal</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_x">XActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="title_activity_cadastra_endereco">CadastraEnderecoActivity</string>

</resources>
