<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="senac.tsi.eclairvinhos.CadastroActivity" >

   	<EditText
        android:id="@+id/end_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/end_logradouro"       
        android:layout_marginTop="10dp"
        android:hint="@string/lblNomeEndereco" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/end_logradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_nome"
        android:ems="10"
        android:hint="@string/lblLogradouro"
        android:layout_marginTop="10dp"
        >
        <requestFocus />
        </EditText>

    <EditText
        android:id="@+id/end_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_logradouro"
        android:ems="10"
        android:hint="@string/lblNumero"
        android:layout_marginTop="10dp"
        android:inputType="number" >
        <requestFocus />
        </EditText>

   
    
    <EditText
        android:id="@+id/end_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/end_logradouro"
        android:layout_below="@+id/end_num"
        android:ems="10"
        android:hint="@string/lblCep"
        android:layout_marginTop="10dp"
        android:maxLength="9"
        android:inputType="number"
        >
        <requestFocus />
        </EditText>
    
   <EditText
        android:id="@+id/end_complem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_cep"
        android:layout_centerVertical="true"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/lblComplemento"
       >
        <requestFocus />
        </EditText>

    <EditText
        android:id="@+id/end_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/end_complem"
        android:layout_below="@+id/end_complem"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/lblCidade"
        >
        <requestFocus />
        </EditText>
    
    <EditText
        android:id="@+id/end_pais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_cidade"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/lblPais"
        >
        <requestFocus />
        </EditText>
    <EditText
        android:id="@+id/end_uf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_pais"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/lblUF"
        android:maxLength="2"
        >
        <requestFocus />
        </EditText>
    
     <Button
        android:id="@+id/btn_cadastrarEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/end_uf"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/btn_cadastrar"
        android:textColor="#FFF" >
        <requestFocus />
        </Button>

</RelativeLayout>
